# commandcrafter

./: .gitignore  Cargo.toml  README.md
examples/: cmb_into_file.rs  cmd_into_file.rs  multi_cmd.rs  run_command.rs
src/: color.rs  execute.rs  filestore.rs  lib.rs  main.rs  tests.rs
